[gd_scene load_steps=21 format=3 uid="uid://0x4fl5frrefp"]

[ext_resource type="Script" path="res://scenes/dialogs/login_dialog/login_dialog.gd" id="1_rcm27"]
[ext_resource type="PackedScene" uid="uid://dl4nx74f03pxd" path="res://scenes/ui_elements/glass_panel.tscn" id="2_1q1xt"]
[ext_resource type="Texture2D" uid="uid://4jhy1ls4ta6u" path="res://assets/gui/blur.jpg" id="2_26f22"]
[ext_resource type="FontFile" uid="uid://bd4vhm6dvnuue" path="res://fonts/Games.ttf" id="3_tn1uw"]
[ext_resource type="Texture2D" uid="uid://cq0qaoeso6jc" path="res://assets/gui/icons/email.png" id="4_sv2m6"]
[ext_resource type="PackedScene" uid="uid://b15ivw3lwhasd" path="res://scenes/ui_elements/basic_rounded_button_01.tscn" id="5_rrgxk"]
[ext_resource type="Texture2D" uid="uid://bklulehpjhbgk" path="res://assets/gui/icons/social/original/facebook.png" id="6_v8eln"]
[ext_resource type="Texture2D" uid="uid://dyplfa2stgo07" path="res://assets/gui/icons/social/original/twitter.png" id="7_snlv7"]
[ext_resource type="Texture2D" uid="uid://ck7iqeul1urwb" path="res://assets/gui/icons/social/original/google.png" id="8_baxqs"]
[ext_resource type="Texture2D" uid="uid://cbeinajolsgnw" path="res://assets/gui/icons/social/original/apple.png" id="9_sauuy"]
[ext_resource type="PackedScene" uid="uid://cwr5sfnmp7808" path="res://scenes/ui_elements/square_button_01/square_button_01.tscn" id="10_4ssys"]
[ext_resource type="Animation" uid="uid://bi4x6trnwshbd" path="res://scenes/dialogs/popup_dialog/Close.res" id="11_j2v8a"]
[ext_resource type="Animation" uid="uid://bjlwdprs18ns1" path="res://scenes/dialogs/popup_dialog/Open.res" id="12_1aptv"]
[ext_resource type="Animation" uid="uid://bxdor4i0qqn5r" path="res://scenes/dialogs/popup_dialog/RESET.res" id="13_qtw5v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t22ix"]

[sub_resource type="LabelSettings" id="LabelSettings_gl7oe"]
font = ExtResource("3_tn1uw")
font_size = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whjt8"]
content_margin_left = 75.0
content_margin_top = 30.0
content_margin_right = 75.0
content_margin_bottom = 30.0
bg_color = Color(0.607843, 0.505882, 0.847059, 0.12549)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.823529, 0.964706, 0.2)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2m76u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jg4r4"]
bg_color = Color(1, 1, 1, 0.203922)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dna21"]
_data = {
"Close": ExtResource("11_j2v8a"),
"Open": ExtResource("12_1aptv"),
"RESET": ExtResource("13_qtw5v")
}

[node name="LoginDialog" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -361.5
offset_right = 341.0
offset_bottom = 361.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(341, 361.5)
focus_next = NodePath("MarginContainer/VBoxContainer/Form/EmailInput")
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_t22ix")
script = ExtResource("1_rcm27")

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="glass_panel" parent="." instance=ExtResource("2_1q1xt")]
layout_mode = 2

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.156863)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_26f22")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "LOGIN"
label_settings = SubResource("LabelSettings_gl7oe")

[node name="Form" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="EmailInput" type="LineEdit" parent="MarginContainer/VBoxContainer/Form"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_whjt8")
placeholder_text = "Email"

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Form/EmailInput"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 33.0
offset_top = -8.0
offset_right = 51.0
offset_bottom = 8.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_sv2m6")

[node name="PasswordInput" type="LineEdit" parent="MarginContainer/VBoxContainer/Form"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_whjt8")
placeholder_text = "Password"
secret = true

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Form/PasswordInput"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 33.0
offset_top = -8.0
offset_right = 51.0
offset_bottom = 8.0
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_sv2m6")

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Form"]
layout_mode = 2
mouse_filter = 2

[node name="LoginButton" parent="MarginContainer/VBoxContainer/Form/Buttons" instance=ExtResource("5_rrgxk")]
layout_mode = 2
mouse_filter = 1
text = "Login
"

[node name="ForgotPasswordButton" type="Button" parent="MarginContainer/VBoxContainer/Form/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0.980392, 0, 1, 1)
text = "Forgot password?"
flat = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Or use"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Socials" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 25
alignment = 1

[node name="FacebookButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Socials"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource("6_v8eln")

[node name="TwitterButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Socials"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource("7_snlv7")

[node name="GoogleButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Socials"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource("8_baxqs")

[node name="AppleButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Socials"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource("9_sauuy")

[node name="NewAccount" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2m76u")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/NewAccount"]
layout_mode = 2
mouse_filter = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 2

[node name="Sep" type="Panel" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jg4r4")

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Don't have an account?"

[node name="RegisterButton" type="Button" parent="MarginContainer/VBoxContainer/NewAccount/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0.980392, 0, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Create"
flat = true

[node name="Overlay" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="CloseButton" parent="Overlay" instance=ExtResource("10_4ssys")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = 52.0
grow_horizontal = 0
expand_icon = true

[node name="ClickBlocker" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_dna21")
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/Form/Buttons/ForgotPasswordButton" to="." method="_on_forgot_password_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Socials/FacebookButton" to="." method="_on_facebook_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Socials/TwitterButton" to="." method="_on_twitter_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Socials/GoogleButton" to="." method="_on_google_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Socials/AppleButton" to="." method="_on_apple_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewAccount/VBoxContainer/HBoxContainer/RegisterButton" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="Overlay/CloseButton" to="." method="_on_close_button_pressed"]
